used list.of to create a list